Fix Contact and Footer Overflow issue

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -51,9 +51,19 @@
 }
 
 @media screen and (max-width: 600px) {
-  #contact {
-    height: fit-content;
-    width: auto;
+ #contact {
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    box-sizing: border-box;
+  }
+  .contact-info-upper-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .contact-info-container {
+   flex: 1 1 calc(50% - 20px);
   }
   #profile {
     height: auto;
@@ -61,8 +71,27 @@
     padding-top: 2rem;
   }
   footer {
-    height: auto;
-    padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+    position: relative; 
+  }
+
+  .footer-bottom-line
+  {
+    height: 1px;
+    margin-top: auto;
+  }
+  .nav-links-container{
+      display:flex;
+      flex-direction:column;
+  }
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .project-img {
     width: 80%;
